[package]
name = "geyser_plugins"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
serde = { version = "1", features = ["derive"] }
serde_derive = "1.0.197"
serde_json = "1.0.114"
rmp-serde = "1.1.2"
tokio = { version = "1.36.0", features = ["full"] }
tokio-tungstenite = {version = "0.21.0", features = ["native-tls"]}
bs58 = "0.5.0"
base64 = "0.22.0"
borsh = "0.9.1"
dotenv = "0.15.0"
itertools = "0.12.1"
async-trait = "0.1.77"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
futures = "0.3.30"
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }

anchor-client = "0.29.0"
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
spl-token= "3.4.1"

solana-account-decoder = "~1.17.1"
solana-client = "~1.17.1"
solana-program = "~1.17.1"
solana-sdk = "~1.17.1"

yellowstone-grpc-client = { git = "https://github.com/rpcpool/yellowstone-grpc.git", branch = "v1.17" }
yellowstone-grpc-proto = { git = "https://github.com/rpcpool/yellowstone-grpc.git", branch = "v1.17" }

openbook-v2 = {git = "https://github.com/openbook-dex/openbook-v2.git", features = ["client"]}

decimal = { path = "decimal" }
fixed = { git = "https://github.com/blockworks-foundation/fixed.git", branch = "v1.11.0-borsh0_10-mango" }
bytemuck = "1.16.0"
